{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 53,
  "lineage": "e9faf164-40fc-dfa8-a2bc-8b8f43d7342a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/networkInterfaces/SHIR-nic",
            "internal_domain_name_suffix": "slrjymqwvrhelogbjdrjtbjdmb.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.135.28.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/virtualNetworks/vnet-KPMG-CA-DWITSCore/subnets/snet-poc"
              }
            ],
            "location": "canadacentral",
            "mac_address": "00-22-48-3D-0C-BB",
            "name": "SHIR-nic",
            "private_ip_address": "10.135.28.4",
            "private_ip_addresses": [
              "10.135.28.4"
            ],
            "resource_group_name": "KPMG-CA-DWSynapsePOC-RG",
            "virtual_machine_id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Compute/virtualMachines/caadcapp0603"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/networkSecurityGroups/nsg-kpmgcadwitscore",
            "location": "canadacentral",
            "name": "nsg-kpmgcadwitscore",
            "resource_group_name": "KPMG-CA-DWSynapsePOC-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allowing_https",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "network_security_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/networkSecurityGroups/nsg-kpmgcadwitscore/securityRules/allowing_https",
            "name": "allowing_https",
            "network_security_group_name": "nsg-kpmgcadwitscore",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "KPMG-CA-DWSynapsePOC-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "Routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.135.28.0/25",
            "id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/routeTables/rt-KPMG-CA-DWITSCore/routes/route1",
            "name": "route1",
            "next_hop_in_ip_address": "8.8.8.8",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "KPMG-CA-DWSynapsePOC-RG",
            "route_table_name": "rt-KPMG-CA-DWITSCore",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.RouteTable",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/routeTables/rt-KPMG-CA-DWITSCore",
            "location": "canadacentral",
            "name": "rt-KPMG-CA-DWITSCore",
            "resource_group_name": "KPMG-CA-DWSynapsePOC-RG",
            "route": [
              {
                "address_prefix": "10.135.28.0/25",
                "name": "route1",
                "next_hop_in_ip_address": "8.8.8.8",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/virtualNetworks/vnet-KPMG-CA-DWITSCore/subnets/snet-poc"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.135.28.0/27",
            "address_prefixes": [
              "10.135.28.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/virtualNetworks/vnet-KPMG-CA-DWITSCore/subnets/snet-poc",
            "name": "snet-poc",
            "resource_group_name": "KPMG-CA-DWSynapsePOC-RG",
            "virtual_network_name": "vnet-KPMG-CA-DWITSCore"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "attaching_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/virtualNetworks/vnet-KPMG-CA-DWITSCore/subnets/snet-poc",
            "network_security_group_id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/networkSecurityGroups/nsg-kpmgcadwitscore",
            "subnet_id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/virtualNetworks/vnet-KPMG-CA-DWITSCore/subnets/snet-poc"
          },
          "dependencies": [
            "azurerm_network_security_rule.network_security_rule",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "attaching-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/virtualNetworks/vnet-KPMG-CA-DWITSCore/subnets/snet-poc",
            "route_table_id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/routeTables/rt-KPMG-CA-DWITSCore",
            "subnet_id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/virtualNetworks/vnet-KPMG-CA-DWITSCore/subnets/snet-poc"
          },
          "dependencies": [
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet",
            "azurerm_resource_group.rg",
            "azurerm_route_table.RouteTable"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.135.28.0/25"
            ],
            "guid": "329ce292-ac16-454e-b8c1-48e299852361",
            "id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/virtualNetworks/vnet-KPMG-CA-DWITSCore",
            "location": "canadacentral",
            "name": "vnet-KPMG-CA-DWITSCore",
            "resource_group_name": "KPMG-CA-DWSynapsePOC-RG",
            "subnet": [
              {
                "address_prefix": "10.135.28.0/27",
                "id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/virtualNetworks/vnet-KPMG-CA-DWITSCore/subnets/snet-poc",
                "name": "snet-poc",
                "security_group": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/networkSecurityGroups/nsg-kpmgcadwitscore"
              }
            ],
            "tags": {
              "CA_Application": "Azure Synapse",
              "CA_BCRating": "BC2",
              "CA_BusinessUnit": "BES",
              "CA_CreatedBy": "lloydlim@Kpmg.ca",
              "CA_DCRating": "Confidential",
              "CA_Environment": "POC",
              "CA_Owner": "Mark Newman",
              "CA_Purpose": "Enterprise Analytics (EA) for BES",
              "CA_WiseID": "5551"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}